# release-readiness-core

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  pyproject.toml
.claude/agents/: talkback-architect.md  talkback-backend.md  talkback-e2e-fixer.md  talkback-frontend.md  talkback-reviewer.md  talkback-smoke-fixer.md  talkback-ux.md
.claude/hooks/: .gitkeep  README.md
.claude/skills/: README.md
.claude/skills/e2e-tests/: SKILL.md  checklist.md  examples.md  selector-guidelines.md
.claude/skills/epic-run/: SKILL.md
.claude/skills/feature-plan/: SKILL.md
.claude/workflows/: feature-development.md
.cursor/: mcp.json.example
.cursor/rules/: atlassian-mcp-jira.mdc  full-auto-github-polling.mdc  github-mcp-and-local-git.mdc
.github/: CODEOWNERS
.github/workflows/: ci.yml  publish-pypi.yml  readiness.yml  smoke-readiness-block.yml  smoke-readiness-pass.yml
docs/agent/: mcp-servers.md  overview.md  rule-ownership.md  subagent-routing.md  testing-validation.md  workflow-epic-run.md  workflow-full-auto.md  workflow-jira.md
docs/contracts/: README.md  coverage-input-v1.schema.json  e2e-input-v1.schema.json  pr-gate-check-v1.schema.json  pr-gate-summary-v1.schema.json  pr-risk-config-v1.schema.json  pr-risk-input-v1.schema.json  prod-health-input-v1.schema.json  release-readiness-output-v1.schema.json  smoke-input-v1.schema.json  validation-config-v1.schema.json
docs/how-to/: 0-quickstart.md  1-map-evidence.md  2-tune-scoring.md  3-ci-integration.md  4-multi-job-ci.md  5-branch-protection.md  6-migrate-from-existing-gate.md  7-configure-pr-risk.md  8-recipe-matrix.md  9-adoption-tiers.md  branch-protection.md  ci-integration.md  map-evidence.md  migrate-from-existing-gate.md  multi-job-ci.md  quickstart.md  tune-scoring.md
docs/prep/: SCRUM-167-validation-key-handling.md  validation-key-handling.md
docs/reference/: outputs.md  pr-risk-config.md
docs/spikes/: SCRUM-166-package-boundary-api-contract.md  SCRUM-178-second-project-validation.md  package-boundary-api-contract.md  pr-risk-port-decisions.md  second-project-validation.md
examples/node-playwright/: README.md
examples/pr-risk/: node-service.yaml  python-service.yaml
examples/python-pytest/: README.md
examples/second-project/: README.md  config.yaml
scripts/: capture_pr_risk_fixtures.sh  setup-mcp-config.sh
src/release_readiness_core/: __init__.py  cli.py  doctor.py  engine.py  init_scaffold.py  pr_gate.py  pr_gate_check.py  pr_gate_combine.py  readiness_engine.py  readiness_evaluate.py  readiness_io.py  readiness_markdown.py  report.py  runtime_config.py
tests/: test_adapters_smoke.py  test_cli_markdown.py  test_config_schema.py  test_doctor.py  test_doctor_pr_risk.py  test_example_workflows.py  test_examples_run.py  test_friction_fixes.py  test_init_scaffold.py  test_junit_adapter.py  test_lcov_adapter.py  test_no_jira_project_key_refs.py  test_pr_gate.py  test_pr_gate_check.py  test_pr_gate_combine.py  test_pr_gate_composite_action.py  test_pr_gate_contracts.py  test_publish_composite_action.py  test_readiness_engine.py  test_readiness_evaluate.py  test_release_readiness_composite_action.py  test_reusable_workflow.py  test_runtime_defaults.py  test_second_project_example.py  test_smoke_import.py  test_validation_merge.py
tests/fixtures/: smoke-config.yaml
tests/pr_risk/: README.md  conftest.py  test_actions.py  test_categories.py  test_classify.py  test_classify_runtime.py  test_config_loader.py  test_config_schema.py  test_corpus_config_equivalence.py  test_default_config_minimal.py  test_evidence.py  test_evidence_templates.py  test_examples_parse.py  test_floors.py  test_gate_registry.py  test_gitdiff.py  test_init_scaffold_pr_risk.py  test_interpret.py  test_mitigate.py  test_parity.py  test_parity_full.py  test_parity_score.py  test_policy.py  test_reducers.py  test_register_detector.py  test_round.py  test_score.py  test_types.py  test_validations_routing_integrations.py
(+366 files in other folders)
