[project]
name = "release-readiness-core"
version = "0.1.0"
description = "Project-agnostic release readiness engine and adapters"
readme = "README.md"
authors = [
    { name = "Paresh Suthar", email = "paresh@suthar.com" }
]
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
release-readiness = "release_readiness_core.cli:main"
release-readiness-evaluate = "release_readiness_core.readiness_evaluate:main"
playwright-to-readiness = "release_readiness_core.adapters.playwright_results:main"
pr-risk-semantic = "release_readiness_core.adapters.pr_risk_semantic:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
