[project]
name = "release-readiness-core"
version = "0.3.2"
description = "Project-agnostic release readiness engine and adapters"
readme = "README.md"
authors = [
    { name = "Paresh Suthar", email = "paresh@suthar.com" }
]
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
release-readiness = "release_readiness_core.cli:main"
release-readiness-evaluate = "release_readiness_core.readiness_evaluate:main"
release-readiness-init = "release_readiness_core.init_scaffold:main"
release-readiness-doctor = "release_readiness_core.doctor:main"
playwright-to-readiness = "release_readiness_core.adapters.playwright_results:main"
junit-to-readiness = "release_readiness_core.adapters.junit_xml:main"
lcov-to-readiness = "release_readiness_core.adapters.lcov_coverage:main"
pr-risk-semantic = "release_readiness_core.adapters.pr_risk_semantic:main"
release-readiness-pr-risk = "release_readiness_core.pr_risk.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
