[project]
name = "release-readiness-core"
version = "0.4.0"
description = "Project-agnostic release readiness engine and adapters"
readme = "README.md"
authors = [
    { name = "Paresh Suthar", email = "paresh@suthar.com" }
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/psuthar/release-readiness-core"
Repository = "https://github.com/psuthar/release-readiness-core"
Changelog = "https://github.com/psuthar/release-readiness-core/blob/main/CHANGELOG.md"
Issues = "https://github.com/psuthar/release-readiness-core/issues"

[project.scripts]
release-readiness = "release_readiness_core.cli:main"
release-readiness-evaluate = "release_readiness_core.readiness_evaluate:main"
release-readiness-init = "release_readiness_core.init_scaffold:main"
release-readiness-doctor = "release_readiness_core.doctor:main"
playwright-to-readiness = "release_readiness_core.adapters.playwright_results:main"
junit-to-readiness = "release_readiness_core.adapters.junit_xml:main"
lcov-to-readiness = "release_readiness_core.adapters.lcov_coverage:main"
pr-risk-semantic = "release_readiness_core.adapters.pr_risk_semantic:main"
release-readiness-pr-risk = "release_readiness_core.pr_risk.cli:main"
release-readiness-combine = "release_readiness_core.pr_gate_combine:main"
release-readiness-check-payload = "release_readiness_core.pr_gate_check:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "jsonschema>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
